[tool.poetry]
name = "ExTrack"
version = "0.1.0"
description = "Simple personal finance application that aims to automate the process of tracking expenses."
authors = ["Marcus Quan"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pysimplegui = "^5.0.4"
ddt = "^1.7.2"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
